--- a/Maintenance/viewMaintenanceDetails.html
+++ b/Maintenance/viewMaintenanceDetails.html
@@ -211,7 +211,7 @@
 			<div class="box-header">
 				<div class="box-name">
 					<i class="fa fa-cogs"></i>
-					<span>Search Maintenance and Calibration Details</span>
+					<span>View Maintenance and Calibration Details</span>
 				</div>
 			</div>
 			<div class="box-content no-padding table-responsive">
